Fix insertNode() to work right.  Bug 135922, r=caillon, sr=peterv, a=asa